# WindowsToolchain

./: .cmake-format.yaml  .editorconfig  .gitignore  CppWinRT.cmake  LICENSE  Ninja.cmake  NuGet.cmake  PowerShell.cmake  README.md  ToolchainCommon.cmake  VSWhere.cmake  WSL.cmake  Windows.Clang.toolchain.cmake  Windows.EWDK.toolchain.cmake  Windows.Kits.cmake  Windows.MSVC.toolchain.cmake  analyze.ps1  azure-pipelines.yml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
Support/: CppWinRT.cmake  MidlRT.cmake  NuGet.cmake  VSWhere.cmake
Tests/Ninja/: CMakeLists.txt  CMakePresets.json  Toolchain.Ninja.Tests.ps1
Tests/NuGet/: CMakeLists.txt  CMakePresets.json  Toolchain.NuGet.Tests.ps1
Tests/Scripts/: CMake.ps1  Common.ps1  Ninja.ps1  NuGet.ps1  Test.ps1
Toolchain/: Windows.MSVC.toolchain.cmake
Toolchain/Support/: CppWinRT.cmake  Imports.cmake  Midl.cmake  Ninja.cmake  PowerShell.cmake  ToolchainCommon.cmake  Windows.Kits.cmake
example/: .clang-format  .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  initialize.ps1  nuget.config
example/CommandLine/: CMakeLists.txt  main.cpp
example/CommandLineAsan/: CMakeLists.txt  main.cpp
example/CommandLineAsm/: CMakeLists.txt  helper.AMD64.asm  helper.ARM64.asm  helper.X86.asm  main.cpp
example/CommandLineC/: CMakeLists.txt  main.c
example/CommandLineCuda/: CMakeLists.txt  main.cu
example/CommandLineImportLibrary/: CMakeLists.txt  main.cpp
example/CommandLineModule/: CMakeLists.txt  main.cpp
example/CommandLineWinRT/: CMakeLists.txt  main.cpp  pch.h
example/RuntimeComponent/: CMakeLists.txt  Class.cpp  Class.h  Class.idl
example/Scripts/: installFASTBuild.ps1  updateCMake.ps1
example/SharedLibrary/: CMakeLists.txt  DllMain.cpp  Project1.cpp  Project1.h  cpp.hint  framework.h  pch.h  targetver.h
example/WindowsApplication/: CMakeLists.txt  Resource.h  WindowsApplication.cpp  WindowsApplication.h  WindowsApplication.rc  app.manifest  framework.h
