#----------------------------------------------------------------------------------------------------------------------
#
#----------------------------------------------------------------------------------------------------------------------
project(CommandLine LANGUAGES CXX)

add_executable(CommandLine
    main.cpp
)

