#----------------------------------------------------------------------------------------------------------------------
#
#----------------------------------------------------------------------------------------------------------------------
project(CommandLineAsan LANGUAGES CXX)

add_executable(CommandLineAsan
    main.cpp
)

