#----------------------------------------------------------------------------------------------------------------------
#
#----------------------------------------------------------------------------------------------------------------------
project(CommandLineC LANGUAGES C)

add_executable(CommandLineC
    main.c
)

