#----------------------------------------------------------------------------------------------------------------------
#
#----------------------------------------------------------------------------------------------------------------------
project(CommandLineCuda LANGUAGES CXX CUDA)

add_executable(CommandLineCuda
    main.cu
)
